Fixing minor bug which strings passed to system builtin did not expand wildcards correctly as they would in a shell. So, pipes are also working.
Tested with the following strings:

system("ls run*/*.log")
system("ls *"); #this doesn't give us a reasonable format
system("find *");
system("ls run???/*.???");
system("ls run???/*.??? | grep log");
system("find run* -type f");


git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@7759 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8